Add new UML Tool

--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 Used programms
 ==============
 .zargo	ArgoUML	http://argouml.tigris.org/
+.asta	Astah	http://astah.net/editions/community 
 
 User services
 =============
